--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             color: #fff;
             font-family: Arial, sans-serif;
             text-align: center;
-            padding: 20px;
+            padding: 2vw;
             position: relative;
             min-height: 100vh;
         }
@@ -29,12 +29,20 @@
             opacity: 0.5;
             z-index: -1;
         }
-        .header { padding: 20px; }
-        .logo { font-size: 3rem; font-weight: bold; color: #e50914; }
-        .slogan { font-size: 1.2rem; margin-top: 10px; }
+        .header { padding: 2vw; }
+        .logo { 
+            font-size: clamp(2rem, 6vw, 3rem);
+            font-weight: bold;
+            color: #e50914;
+        }
+        .slogan { 
+            font-size: clamp(1rem, 3vw, 1.2rem);
+            margin-top: 1vw;
+        }
         .video-container {
             max-width: 800px;
-            margin: 30px auto;
+            width: 100%;
+            margin: 3vw auto;
             border: 3px solid #e50914;
             border-radius: 10px;
             overflow: hidden;
@@ -44,16 +52,20 @@
             width: 100%;
             pointer-events: none;
         }
-        .video-text { font-size: 1.5rem; margin-bottom: 20px; color: #e50914; }
+        .video-text { 
+            font-size: clamp(1.2rem, 4vw, 1.5rem);
+            margin-bottom: 2vw;
+            color: #e50914;
+        }
         .mute-button {
             position: absolute;
-            bottom: 20px;
-            left: 20px;
+            bottom: 2vw;
+            left: 2vw;
             background: rgba(0, 0, 0, 0.7);
             color: #fff;
             border: 2px solid #e50914;
-            padding: 10px 20px;
-            font-size: 1rem;
+            padding: 1vw 2vw;
+            font-size: clamp(0.8rem, 2.5vw, 1rem);
             border-radius: 50px;
             cursor: pointer;
             transition: background 0.3s ease;
@@ -61,19 +73,32 @@
         .mute-button:hover {
             background: #e50914;
         }
-        .benefits { padding: 20px; }
-        .benefits h2 { color: #e50914; font-size: 2rem; margin-bottom: 20px; }
-        .benefits ul { list-style: none; text-align: left; max-width: 600px; margin: 0 auto; }
-        .benefits li { font-size: 1.2rem; margin-bottom: 15px; }
+        .benefits { padding: 2vw; }
+        .benefits h2 { 
+            color: #e50914;
+            font-size: clamp(1.5rem, 5vw, 2rem);
+            margin-bottom: 2vw;
+        }
+        .benefits ul { 
+            list-style: none;
+            text-align: left;
+            max-width: 600px;
+            width: 90%;
+            margin: 0 auto;
+        }
+        .benefits li { 
+            font-size: clamp(1rem, 3vw, 1.2rem);
+            margin-bottom: 1.5vw;
+        }
         .cta-button {
             background: #00cc00;
             color: #fff;
             text-decoration: none;
-            padding: 15px 30px;
-            font-size: 1.3rem;
+            padding: 1.5vw 3vw;
+            font-size: clamp(1rem, 3.5vw, 1.3rem);
             border-radius: 50px;
             display: inline-block;
-            margin: 20px 0;
+            margin: 2vw 0;
             transition: background 0.3s ease;
             pointer-events: none;
             opacity: 0.5;
@@ -82,12 +107,49 @@
             pointer-events: auto;
             opacity: 1;
         }
-        .cta-button:hover { background: #f40612; }
-        .cta-support { font-size: 1rem; margin-bottom: 30px; }
-        .proof { background: #333; padding: 20px; border-radius: 10px; max-width: 600px; margin: 0 auto 30px; }
-        .proof p { font-style: italic; margin-bottom: 10px; }
-        .proof .guarantee { color: #e50914; font-weight: bold; }
-        .footer { padding: 20px; font-size: 0.9rem; }
+        .cta-button:hover { 
+            background: #f40612;
+        }
+        .cta-support { 
+            font-size: clamp(0.8rem, 2.5vw, 1rem);
+            margin-bottom: 3vw;
+        }
+        .proof { 
+            background: #333;
+            padding: 2vw;
+            border-radius: 10px;
+            max-width: 600px;
+            width: 90%;
+            margin: 0 auto 3vw;
+        }
+        .proof p { 
+            font-style: italic;
+            margin-bottom: 1vw;
+            font-size: clamp(0.9rem, 2.8vw, 1rem);
+        }
+        .proof .guarantee { 
+            color: #e50914;
+            font-weight: bold;
+        }
+        .footer { 
+            padding: 2vw;
+            font-size: clamp(0.7rem, 2vw, 0.9rem);
+        }
+
+        /* Media Queries para ajustes adicionais */
+        @media (max-width: 600px) {
+            .video-container {
+                max-width: 100%;
+            }
+            .mute-button {
+                bottom: 1vw;
+                left: 1vw;
+                padding: 0.8vw 1.6vw;
+            }
+            .benefits ul {
+                text-align: center;
+            }
+        }
     </style>
 </head>
 <body>
@@ -98,11 +160,11 @@
 
     <div class="video-container">
         <p class="video-text">Assista o vídeo completo e libere seu acesso exclusivo!</p>
-        <video id="promo-video" autoplay>
+        <video id="promo-video" autoplay muted>
             <source src="Cinneflivideo1.mp4" type="video/mp4">
             Seu navegador não suporta vídeo.
         </video>
-        <button class="mute-button" id="mute-toggle">Mutar</button>
+        <button class="mute-button" id="mute-toggle">Ativar Som</button>
     </div>
 
     <section class="benefits">
@@ -110,9 +172,8 @@
         <ul>
             <li>✓ Filmes e séries em 4K que você não encontra em nenhum outro lugar</li>
             <li>✓ Assista onde e quando quiser – liberdade total na palma da sua mão</li>
-            <li>✓ Primeiro mês grátis – experimente sem risco!</li>
             <li>✓ Junte-se a milhares de assinantes apaixonados por CINNEFLIX</li>
-            <li>✓ Novos títulos toda semana – nunca fique sem algo incrível para assistir</li>
+            <li>✓ Novos títulos Pottery semana – nunca fique sem algo incrível para assistir</li>
         </ul>
     </section>
 
@@ -137,14 +198,26 @@
         let lastTime = 0;
         let isPlaying = false;
 
-        // Inicia o vídeo automaticamente com som e bloqueia pausa
-        video.volume = 1.0; // Volume máximo por padrão
+        // Garante que o vídeo comece automaticamente ao carregar a página
+        window.addEventListener("load", () => {
+            video.play().catch((error) => {
+                console.log("Erro ao reproduzir o vídeo automaticamente:", error);
+                // Tenta novamente após um pequeno delay, caso o navegador bloqueie
+                setTimeout(() => video.play(), 100);
+            });
+        });
+
+        // Configurações iniciais do vídeo
+        video.volume = 1.0; // Volume máximo disponível
+        video.muted = true; // Inicia muted para garantir autoplay em navegadores restritivos
         video.addEventListener("play", () => {
             isPlaying = true;
         });
+
+        // Impede pausa forçando a reprodução apenas se pausado manualmente
         video.addEventListener("pause", () => {
-            if (isPlaying) {
-                video.play(); // Força a reprodução se tentar pausar
+            if (isPlaying && video.currentTime < video.duration) {
+                video.play();
             }
         });
 
@@ -154,6 +227,8 @@
                 video.currentTime = lastTime; // Mantém o último tempo válido
             }
         });
+
+        // Atualiza o tempo e desbloqueia o CTA
         video.addEventListener("timeupdate", () => {
             lastTime = video.currentTime;
             if (video.currentTime >= unlockTime) {
