--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </ul>
     </section>
 
-    <a href="planos/planos.html" class="cta-button" id="cta-button">Quero meu CINNEFLIX agora – Assine já!</a>
+    <a href="https://pay.kirvano.com/fd5370cc-b5cd-4c95-9ac6-6e1bccfafb5b?aff=e3eeb5bf-6167-4150-b923-7a5d78950644" class="cta-button" id="cta-button">Quero meu CINNEFLIX agora – Assine já!</a>
     <p class="cta-support">Apenas alguns cliques te separam do entretenimento ilimitado.</p>
 
     <section class="proof">
